--- a/wt-skins-manager/Cargo.toml
+++ b/wt-skins-manager/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "War_Thunder_Skinchanger"
-version = "0.1.0"
+name = "wt-skins-manager"
+version = "1.0.0"
 edition = "2021"
+authors = ["Slyvred <https://github.com/Slyvred>"]
 
 [dependencies]
 headless_chrome = "1.0.10"
